Bug 300113 - Networkmanagement KDED module crash on KDE startup
Summary: Networkmanagement KDED module crash on KDE startup
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: KDED Module (other bugs)
Version First Reported In: 0.9
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 308026 308150 308446 309719 311801 312140 312735 314372 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-05-16 07:14 UTC by Krzysztof Nowicki
Modified: 2013-02-04 04:36 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.3
Sentry Crash Report:


Attachments
kded4 valgrind crash log (48.13 KB, text/plain)
2012-05-20 09:53 UTC, Kirill Elagin
Details
connections directory (536 bytes, application/octet-stream)
2012-05-20 10:28 UTC, Kirill Elagin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Krzysztof Nowicki 2012-05-16 07:14:14 UTC
Application: kded4 ($Id$)
KDE Platform Version: 4.8.3 (4.8.3) (Compiled from sources)
Qt Version: 4.8.1
Operating System: Linux 3.3.5-gentoo x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
After installing networkmanagement 0.9.0.2 the KDED daemon crashed while loading KDE. Attempts to restart it manually resulted in the same crash happening again.

The crash can be reproduced every time.

-- Backtrace:
Application: KDE Daemon (kded4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f42c7902760 (LWP 30734))]

Thread 3 (Thread 0x7f42af265700 (LWP 30743)):
#0  0x00007f42c7261963 in poll () from /lib64/libc.so.6
#1  0x00007f42c2715588 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f42c2715a39 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f42c5073aef in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#4  0x00007f42c5043bd2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#5  0x00007f42c5043e27 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#6  0x00007f42c4f43e97 in QThread::exec() () from /usr/lib64/qt4/libQtCore.so.4
#7  0x00007f42c5023b8f in ?? () from /usr/lib64/qt4/libQtCore.so.4
#8  0x00007f42c4f46e9b in ?? () from /usr/lib64/qt4/libQtCore.so.4
#9  0x00007f42c2c74e2c in start_thread () from /lib64/libpthread.so.0
#10 0x00007f42c726a4fd in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f42a7fff700 (LWP 30750)):
#0  0x00007f42c7263f73 in select () from /lib64/libc.so.6
#1  0x00007f42c5023211 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007f42c4f46e9b in ?? () from /usr/lib64/qt4/libQtCore.so.4
#3  0x00007f42c2c74e2c in start_thread () from /lib64/libpthread.so.0
#4  0x00007f42c726a4fd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f42c7902760 (LWP 30734)):
[KCrash Handler]
#6  0x00007f42a75e9b5f in Knm::SettingPersistence::SettingPersistence (this=0x23b5940, setting=0x234d670, config=..., mode=Knm::SettingPersistence::Secure) at /var/tmp/portage/kde-misc/networkmanagement-0.9.0.2/work/networkmanagement-0.9.0.2/kded/settingsnm08/settingpersistence.cpp:28
#7  0x00007f42a75ec111 in Knm::CdmaPersistence::CdmaPersistence (this=0x23b5940, setting=0x234d670, config=..., mode=Knm::SettingPersistence::Secure) at /var/tmp/portage/kde-misc/networkmanagement-0.9.0.2/work/networkmanagement-0.9.0.2/kded/settingsnm08/cdmapersistence.cpp:8
#8  0x00007f42a75eface in Nm08Connections::persistenceFor (this=0x2306940, setting=0x234d670, config=...) at /var/tmp/portage/kde-misc/networkmanagement-0.9.0.2/work/networkmanagement-0.9.0.2/kded/nm08connections.cpp:170
#9  0x00007f42a75ef608 in Nm08Connections::importNextNm08Connection (this=0x2306940) at /var/tmp/portage/kde-misc/networkmanagement-0.9.0.2/work/networkmanagement-0.9.0.2/kded/nm08connections.cpp:136
#10 0x00007f42a75e94bd in NetworkManagementService::finishInitialization (this=0x2141420) at /var/tmp/portage/kde-misc/networkmanagement-0.9.0.2/work/networkmanagement-0.9.0.2/kded/service.cpp:160
#11 0x00007f42a75e876f in NetworkManagementService::qt_static_metacall (_o=0x2141420, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fffb8dbfb00) at /var/tmp/portage/kde-misc/networkmanagement-0.9.0.2/work/networkmanagement-0.9.0.2_build/kded/moc_service.cpp:52
#12 0x00007f42c5058a19 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#13 0x00007f42a7155759 in SessionAbstractedService::DoFinishInitialization (this=0x214b1a0) at /var/tmp/portage/kde-misc/networkmanagement-0.9.0.2/work/networkmanagement-0.9.0.2_build/libs/service/moc_sessionabstractedservice.cpp:180
#14 0x00007f42a716fce6 in SessionAbstractedService::FinishInitialization (this=0x214b1a0) at /var/tmp/portage/kde-misc/networkmanagement-0.9.0.2/work/networkmanagement-0.9.0.2/libs/service/sessionabstractedservice.cpp:165
#15 0x00007f42a715546d in SessionAbstractedService::qt_static_metacall (_o=0x214b1a0, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fffb8dbfc90) at /var/tmp/portage/kde-misc/networkmanagement-0.9.0.2/work/networkmanagement-0.9.0.2_build/libs/service/moc_sessionabstractedservice.cpp:80
#16 0x00007f42a7155593 in SessionAbstractedService::qt_metacall (this=0x214b1a0, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fffb8dbfc90) at /var/tmp/portage/kde-misc/networkmanagement-0.9.0.2/work/networkmanagement-0.9.0.2_build/libs/service/moc_sessionabstractedservice.cpp:122
#17 0x00007f42c53bfee1 in ?? () from /usr/lib64/qt4/libQtDBus.so.4
#18 0x00007f42c53c0f6d in ?? () from /usr/lib64/qt4/libQtDBus.so.4
#19 0x00007f42c53c1727 in ?? () from /usr/lib64/qt4/libQtDBus.so.4
#20 0x00007f42c53c1a5b in ?? () from /usr/lib64/qt4/libQtDBus.so.4
#21 0x00007f42c505dbe6 in QObject::event(QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#22 0x00007f42c5ce07d4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#23 0x00007f42c5ce55a1 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#24 0x00007f42c6a17b16 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#25 0x00007f42c5044dcc in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#26 0x00007f42c504861a in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/qt4/libQtCore.so.4
#27 0x00007f42c50736d3 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#28 0x00007f42c2715081 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#29 0x00007f42c2715830 in ?? () from /usr/lib64/libglib-2.0.so.0
#30 0x00007f42c2715a39 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#31 0x00007f42c5073aef in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#32 0x00007f42c5d8384e in ?? () from /usr/lib64/qt4/libQtGui.so.4
#33 0x00007f42c5043bd2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#34 0x00007f42c5043e27 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#35 0x00007f42c5048935 in QCoreApplication::exec() () from /usr/lib64/qt4/libQtCore.so.4
#36 0x00007f42c75237d5 in kdemain () from /usr/lib64/libkdeinit4_kded4.so
#37 0x00007f42c71b43dd in __libc_start_main () from /lib64/libc.so.6
#38 0x0000000000400791 in _start ()

Reported using DrKonqi
Comment 1 Krzysztof Nowicki 2012-05-16 08:27:31 UTC
I noticed that the crash happens when Networkmanagement is trying to import settings from an older version (0.8). When remove everything from the ~/.kde4/share/apps/networkmanagement/connections directory the KDED module runs fine.
Comment 2 Kirill Elagin 2012-05-20 09:53:52 UTC
Created attachment 71234 [details]
kded4 valgrind crash log

Yep! Managed to reproduce this after downgrading to 0.8* and upgrading back to 0.9*.

The problem seems to be related to my university network that uses 802.1X WEP.
The crash is gone after removing `~/.kde4/share/apps/networkmanagement/connections` (I've got a backup if you need it but there is really nothing interesting there—just my home WPA net).
Comment 3 Kirill Elagin 2012-05-20 10:28:06 UTC
Created attachment 71235 [details]
connections directory

So here is the contents of my `connections` dir. kded4 crashes even when the NM section in the wallet is empty (I've got a backup in case you need it).

P.S. I don't get where does this `connections` dir come from (when I run networkmanagement for the first time?).
Comment 4 Lamarque V. Souza 2012-05-23 22:42:28 UTC
Git commit b9d636906a43e73e46766b2bb712d521534f71d8 by Lamarque V. Souza.
Committed on 24/05/2012 at 00:39.
Pushed by lvsouza into branch 'master'.

Fix detection of stale secret requests. The same connection may contain
secrets in different settings, delete the connection only if there is no
more secrets to read from it.
FIXED-IN: 0.9.0.3

M  +10   -3    libs/service/secretstorage.cpp

http://commits.kde.org/networkmanagement/b9d636906a43e73e46766b2bb712d521534f71d8
Comment 5 Lamarque V. Souza 2012-05-23 22:46:35 UTC
Git commit e3e92b828a46447be71a89ecc073a4ba953268b1 by Lamarque V. Souza.
Committed on 24/05/2012 at 00:39.
Pushed by lvsouza into branch 'nm09'.

Fix detection of stale secret requests. The same connection may contain
secrets in different settings, delete the connection only if there is no
more secrets to read from it.
FIXED-IN: 0.9.0.3
(cherry picked from commit b9d636906a43e73e46766b2bb712d521534f71d8)

M  +10   -3    libs/service/secretstorage.cpp
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/e3e92b828a46447be71a89ecc073a4ba953268b1
Comment 6 Jekyll Wu 2012-10-07 14:26:31 UTC
*** Bug 308026 has been marked as a duplicate of this bug. ***
Comment 7 Jekyll Wu 2012-10-10 05:06:44 UTC
*** Bug 308150 has been marked as a duplicate of this bug. ***
Comment 8 Lamarque V. Souza 2012-10-15 17:44:29 UTC
*** Bug 308446 has been marked as a duplicate of this bug. ***
Comment 9 uc 2012-10-15 18:39:05 UTC
Thank you for the reference.  I didn't see the relationship to networkmanager so my search didn't find this bug report.  Deleted connections and 12.2 openSuse booted fine.
Comment 10 Christoph Feck 2012-11-07 23:08:12 UTC
*** Bug 309719 has been marked as a duplicate of this bug. ***
Comment 11 Jekyll Wu 2012-12-16 20:18:52 UTC
*** Bug 311801 has been marked as a duplicate of this bug. ***
Comment 12 Jekyll Wu 2012-12-24 03:31:24 UTC
*** Bug 312140 has been marked as a duplicate of this bug. ***
Comment 13 Jekyll Wu 2013-01-06 13:25:56 UTC
*** Bug 312735 has been marked as a duplicate of this bug. ***
Comment 14 Jekyll Wu 2013-02-04 04:36:05 UTC
*** Bug 314372 has been marked as a duplicate of this bug. ***