Fix detection of stale secret requests. The same connection may contain secrets in different settings, delete the connection only if there is no more secrets to read from it.

BUG: 300113
FIXED-IN: 0.9.0.3